# azure-rag-system

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Design.md  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
assets/promo/: azure-rag-promo.webm
assets/readme/: demo-overview.webm
azure_rag/: __init__.py  agent.py  agui.py  api.py  auth.py  config.py  corpus.py  discussion.py  identity.py  rag.py  readiness.py  search_pipeline.py  sessions.py  suggestions.py  telemetry.py
docs/: api.md  architecture.md  deployment.md  development.md  roadmap.md
infra/: README.md  bootstrap.bicep  bootstrap.sh  configure-ui-auth.sh  deploy.sh  destroy.sh  enable-search-identity.sh  main.bicep  setup-all.sh  setup-entra-apps.sh
infra/modules/: apim-service.bicep  apim.bicep  bootstrap-resources.bicep  container-apps.bicep  network.bicep  private-dns.bicep  rbac-acr.bicep  rbac-openai.bicep  (+3 more)
sample_docs/: contoso-product.md  contoso-security.md  contoso-support.md
scripts/: capture_promo_demo.mjs  capture_readme_demo.mjs  setup_azure_rag.py
tests/: test_agent.py  test_agui.py  test_api.py  test_auth.py  test_config.py  test_corpus_api.py  test_discussion_api.py  test_identity.py  test_infra_scripts.py  test_infra_static.py  test_rag.py  test_readiness.py  test_search_pipeline.py  test_search_pipeline_delete.py  test_sessions.py  test_suggestions.py
ui/: .dockerignore  .env.local.example  Dockerfile  next.config.ts  package-lock.json  package.json  vitest.config.ts
video/: README.md  package-lock.json  package.json  tsconfig.json
(+53 files in other folders)
