[project]
name = "azure-rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ag-ui-protocol>=0.1.19",
    "azure-storage-blob>=12.20",
    "fastapi>=0.115",
    "openai>=2.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
