[project]
name = "azure-rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-framework-ag-ui>=1.0.0rc7",
    "agent-framework-openai>=1.10.0",
    "azure-cosmos>=4.9",
    "azure-identity>=1.19",
    "azure-monitor-opentelemetry>=1.8.9",
    "azure-storage-blob>=12.20",
    "fastapi>=0.115",
    "langsmith>=0.10.0",
    "openai>=2.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "requests>=2.32",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
